base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-name
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
